--- a/src/all.module.css
+++ b/src/all.module.css
@@ -583,6 +583,34 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .Web3ConnectWallet img {width:25px; height:25px; display: inline-block; margin: 3px 3px 3px -7px; vertical-align: middle;}
 .Web3ConnectWallet p {display: inline-block; margin: 3px;vertical-align: middle;font-size: 13px; font-weight: bold;}
 
+.ObjectsLists {width: 100%; display: inline-block;}
+.TokenObject {width: 100%; height: 100px; display: inline-block; padding: 0px 20px 0px 0px; text-align: left;vertical-align: top; border: 1px solid #ffffff; border-radius: 20px; overflow: hidden; cursor: pointer; margin: 5px auto;}
+.TokenObject:hover {background-color: #ffffff;}
+.TokenObject figure {width: 100px; height: 100px; display: inline-block;}
+.TokenObject figure img {width: 100%; height: 100%; display: inline-block}
+.ObjectInfo {width: 440px;height: 80px;padding: 10px 5px 10px 20px; display: inline-block; text-align: right; vertical-align: top;}
+.ObjectInfoAndLink {width: 45%; display: inline-block; text-align: left; margin-right: 5%; vertical-align: middle; padding: 4% 0;}
+.ObjectInfoAndLink h5 {width:100%; text-align:left;}
+.ObjectInfoAndLink a {padding: 4px 8px; font-size: 11px; border: 2px solid #849bbd; color: #849bbd; margin: 5px 5px 5px 0; border-radius: 5px; display: inline-block;}
+.ObjectInfoAndLink .LinkCool {border: 2px solid #59b0fb;color: #59b0fb; font-weight: bold;}
+.ObjectInfoBalance {width: 50%; display: inline-block; text-align: right;vertical-align: middle;padding: 7% 0;}
+.ObjectInfoBalance p {width: 100%; text-align: right;}
+.ObjectInfoBalance span {width: 100%; text-align: right; font-size:11px;}
+.ObjectInfoCategory {width: 100%; display: inline-block; text-align: left; padding: 4% 0;}
+.ObjectInfoCategory h5 {width:100%; text-align:left;}
+.ObjectInfoCategory span {width: 100%; text-align: left; font-size:11px;}
+.TokensSelector {width: 100%; display: block; position: relative;}
+.TokensSelectorList {height: 90%; width: 100%; padding: 10px; display: block; border-radius: 20px 20px 0 0; overflow-y: scroll;}
+.TokensSelectorCategories {height: 60px; background-color: #525252; border-top: 2px solid #E4E4E4; width: 100%; display: block; border-radius: 0 0 20px 20px; position: absolute; left:0; bottom: 0; text-align: center; overflow: hidden;}
+.TokensSelectorCategories input {width: 40%;display: inline-block; vertical-align: top;height: 100%;background-color: #525252;border: none;border-radius: 0 0 0 20px;color: #ffffff;font-size: 16px;padding: 2%;}
+.TokensSelectorCategories input::placeholder {color: #ffffff;opacity: 1;}
+.TokensSelectorCategories input:-ms-input-placeholder {color: #ffffff;}
+.TokensSelectorCategories input::-ms-input-placeholder {color: #ffffff;}
+.TokensSelectorCategoriesList {width: 60%; height:100%; display: inline-block;background-color: #F0F0F0;}
+.TokensSelectorCategoriesList a {width: 33.33%;padding: 20px 1%; display: inline-block; background-color: #F0F0F0; vertical-align: top; cursor: pointer;}
+.TokensSelectorCategoriesList .selected, .TokensSelectorCategoriesList a:hover  { background-color: #ffffff;}
+.TokensSelectorCategoriesList .selected {font-weight: bold;}
+
 @media only screen and (max-width: 990px) {
   .NavigationItem {font-size: 11px;width: 20%;overflow: hidden; }
   .Navigation .Selected img {display: none;}
@@ -945,11 +973,11 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .dark .OrgSingle .OrgInfo {background-color: #1b1b1b;}
 
 .light .GovCard {background-color: #ffffff;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
-.biz .GovCard {background-color: #f5f9ff; border-radius: 0px;    border: 1px solid #b7c5d9;border-left: none;border-top: none;}
+.biz .GovCard {background-color: #ccd3db; border-radius: 0px; border: 1px solid #b7c5d9;border-left: none;border-top: none;border-right: none;}
 .dark .GovCard {background-color: #000000;box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);}
 
 .light .GovCardHead {background-color: #e9effc;}
-.biz .GovCardHead {background-color: #ccd3db;; background: linear-gradient(180deg, #f8fbff 90%, #99e9da 100%); border-radius: 0px;    border: 1px solid #99e9da;border-left: none;border-top: none;}
+.biz .GovCardHead {background-color: #ccd3db; background: linear-gradient(180deg, #f8fbff 90%, #99e9da 100%); border-radius: 0px;    border: 1px solid #99e9da;border-left: none;border-top: none;border-right: none;}
 .dark .GovCardHead {background-color: #383c42;}
 
 .light .GovCardHeadDelegation span {border-color: #ffffff;}
