--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1243,6 +1243,9 @@ input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .dark .Web3ConnectWallet {background-color: #525252;}
 
 .biz .Factories {background: linear-gradient(0deg, #ffffff 50%, hsl(212deg 30% 83%) 100%);}
+.biz .Items {background: linear-gradient(0deg, #ffffff 50%, hsl(212deg 30% 83%) 100%);}
+.biz .Governances {background: linear-gradient(0deg, #ffffff 50%, hsl(212deg 30% 83%) 100%);}
+.biz .Covenants {background: linear-gradient(0deg, #ffffff 50%, hsl(212deg 30% 83%) 100%);}
 
 @media only screen and (max-width: 1200px) {
   .light .Header .BlurHeader {background: linear-gradient(-130deg,#c1befc4d,#fdf7f515 80%);}
