--- a/src/pages/items/dapp/items-main-sections.module.css
+++ b/src/pages/items/dapp/items-main-sections.module.css
@@ -27,3 +27,4 @@
 }
 .ComingSoon {width: 700px; display: inline-block; margin: 100px auto;}
 .ComingSoon img {width: 400px;}
+.ComingSoon a {font-size: 14px; font-weight: bold; text-decoration: underline;}
